<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:padding="20dp">

    <TextView
        android:text="Priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewPriorityTitle"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="0dp"
        android:elevation="0dp"
        android:paddingTop="8dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/priorityRadioGroup">

        <RadioButton
            android:text="@string/high_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonHigh"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:layout_marginLeft="16dp" />

        <RadioButton
            android:text="@string/medium_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonMedium"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:layout_marginLeft="16dp" />

        <RadioButton
            android:text="@string/low_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonLow"
            android:layout_marginBottom="8dp"
            android:checked="true"
            android:layout_weight="1"
            android:layout_marginLeft="16dp" />
    </RadioGroup>

    <Button
        android:text="@string/choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prioritySave"
        android:layout_gravity="right"
        android:background="@android:color/transparent" />
</LinearLayout>