<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_edit_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_edit_item"
   >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="1"
        android:gravity="end"
        android:baselineAligned="false">
            <android.support.design.widget.TextInputLayout
                android:layout_weight="0.8"
                android:layout_gravity="end"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/task"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/task"
                    android:inputType="text"
                    android:textSize="48sp"
                    android:maxLines="1"
                    android:id="@+id/taskET" />
            </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="4"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/calendar"
                android:id="@+id/imageViewDate"
                android:layout_weight="0.2"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:id="@+id/textViewDate"
                android:layout_weight="0.8"
                android:clickable="true"
                android:hint="@string/date"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/clock"
                android:id="@+id/imageViewTime"
                android:layout_weight="0.2"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:id="@+id/textViewTime"
                android:layout_weight="0.8"
                android:hint="@string/time"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/alarmclock"
                android:id="@+id/imageViewAlarm"
                android:layout_weight="0.2"
                android:layout_gravity="center"/>
            <Switch
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/reminder"
                android:id="@+id/switchAlarm"
                android:layout_weight="0.8"
                android:textSize="18sp"
                android:textColor="?android:attr/textColorTertiary" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/flag"
                android:id="@+id/imageViewPriority"
                android:layout_weight="0.2"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:id="@+id/textViewPriority"
                android:layout_weight="0.8"
                android:hint="@string/priority"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/notepad"
                android:id="@+id/imageViewDescription"
                android:layout_weight="0.2"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/EditTextDescription"
                android:gravity="left|center"
                android:layout_weight="0.8"
                android:hint="@string/note"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
